Bug fixes
- it was possible to click on the homepage query examples when they were
invisible

--- a/style/main.css
+++ b/style/main.css
@@ -233,6 +233,11 @@ body.homepage #nav {
 	cursor: pointer;
 }
 
+body:not(.homepage) #homepage-text,
+body:not(.homepage) #homepage-text code {
+	cursor: default;
+}
+
 body.homepage #homepage-text {
 	opacity: 1;
 	max-height: 256px;
